--- a/github-getter/sass/main.scss
+++ b/github-getter/sass/main.scss
@@ -11,6 +11,7 @@ html {
     top: 1.6rem;
     flex-direction: column;
 
+
 }
 
 .results {
@@ -18,6 +19,7 @@ html {
     align-items: center;
     flex-direction: column;
     padding-top: 2.5rem;
+
 }
 
 .input {
@@ -34,5 +36,53 @@ html {
 }
 
 .details {
+    height:0;
     opacity: 0;
+    transition: all 0.1s ease-in-out;
+
+    &__link {
+        text-align: center;
+      
+    }
+}
+
+.block {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 1rem;
+}
+
+.arrow {
+    cursor: pointer;
+
+}
+
+.down {
+    border: solid black;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(45deg);
+    transition: transform 0.5s ease-in-out;
+}
+
+.loadmore {
+    visibility: hidden;
+    width: 150px;
+    margin-top: 2rem;
+    line-height: 40px;
+    border-radius: 2px;
+    margin: 0 auto;
+    display: block;
+    background: #446CB3;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+
+}
+
+.loader {
+    padding: 2.5rem;
 }
