--- a/github-getter/css/styles.css
+++ b/github-getter/css/styles.css
@@ -15,16 +15,24 @@ html {
   flex-direction: column;
   padding-top: 2.5rem; }
 
-.input {
+.search {
   display: flex;
-  position: relative;
-  top: 20rem;
-  width: 10rem;
-  transition: top 0.4s ease-in-out;
-  outline: none; }
+  flex-direction: row;
+  align-content: center; }
+  .search__box {
+    outline: none;
+    width: 10rem; }
+  .search__container {
+    display: flex;
+    position: relative;
+    top: 20rem;
+    width: 15rem;
+    transition: top 0.2s ease-in-out;
+    outline: none; }
+  .search__failed {
+    animation: shake 0.2s ease-in-out 0s 2; }
 
-.input:focus,
-.input:not(:placeholder-shown) {
+.inputSearched {
   top: 1.6rem; }
 
 .details {
@@ -60,16 +68,22 @@ html {
   margin: 0 auto;
   display: block;
   background: #446CB3;
+  outline: none;
   color: #fff;
   cursor: pointer;
   text-align: center; }
   .btn__loader {
     visibility: hidden; }
 
-.search {
-  display: flex;
-  flex-direction: row;
-  align-content: center; }
-
 .loader {
   padding: 2.5rem; }
+
+@keyframes shake {
+  0% {
+    margin-left: 0rem; }
+  25% {
+    margin-left: 0.5rem; }
+  75% {
+    margin-left: -0.5rem; }
+  100% {
+    margin-left: 0rem; } }
