--- a/github-getter/sass/main.scss
+++ b/github-getter/sass/main.scss
@@ -22,18 +22,32 @@ html {
 
 }
 
-.input {
+.search {
     display: flex;
-    position: relative;
-    top: 20rem;
-    width: 10rem;
-    transition: top 0.4s ease-in-out;
-    outline: none;
+    flex-direction: row;
+    align-content: center;
+
+    &__box {
+        outline: none;
+        width: 10rem;
+    }
+    &__container {
+        display: flex;
+        position: relative;
+        top: 20rem;
+        width: 15rem;
+        transition: top 0.2s ease-in-out;
+        outline: none;
+    }
+
+    &__failed {
+        animation: shake 0.2s ease-in-out 0s 2;
+
+    }
     
 }
 
-.input:focus,
-.input:not(:placeholder-shown) {
+.inputSearched {
     top: 1.6rem;
 }
 
@@ -81,18 +95,22 @@ html {
     margin: 0 auto;
     display: block;
     background: #446CB3;
+    outline: none;
     color: #fff;
     cursor: pointer;
     text-align: center;
 
 }
 
-.search {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-}
+
 
 .loader {
     padding: 2.5rem;
 }
+
+@keyframes shake {
+    0% { margin-left: 0rem; }
+    25% { margin-left: 0.5rem; }
+    75% { margin-left: -0.5rem; }
+    100% { margin-left: 0rem; }
+  }
