--- a/github-getter/sass/main.scss
+++ b/github-getter/sass/main.scss
@@ -14,7 +14,7 @@ html {
 
 }
 
-.results {
+.results-container {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -100,6 +100,18 @@ html {
     cursor: pointer;
     text-align: center;
 
+}
+
+.block { 
+    background-color: aliceblue;
+    max-width: 25rem;
+    max-height: 20rem;
+    margin: 0.2rem;
+    cursor: pointer;
+}
+
+.block:hover {
+    background-color: lightgrey;
 }
 
 
